INTERNAL: fix problem with creating agent inputs (ALFA-162)
Closes ALFA-162

Reviewed-by: Sławomir Korbas <skorbas@silenteight.com>
Reviewed-by: Witold Zegarowski <wzegarowski@silenteight.com>
Merged from: https://gitlab.silenteight.com/sens/scb-bridge/-/merge_requests/74